# PeakFinder

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json  first  plotTests.gp
cython/: PeakFinder.py  setup.py
dep/eo/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  PKGBUILD  config.h  eo.pc  install_symlink.py
dep/eo/doc/: CTestTestfile.cmake  cmake_install.cmake
dep/eo/src/: CTestTestfile.cmake  cmake_install.cmake  eoReduce.h
dep/eo/src/do/: CTestTestfile.cmake  (+1 more)
dep/eo/test/: CTestTestfile.cmake  cmake_install.cmake  t-MGE  t-MGE-control  t-MGE1bit  t-eo  t-eoCMAES  t-eoCheckpointing  t-eoEasyPSO  t-eoExtendedVelocity  t-eoExternalEO  t-eoFitnessAssembled  t-eoGenOp  t-eoIQRStat  t-eoInitPermutation  t-eoInt  t-eoLogger  t-eoOrderXover  t-eoPBIL  t-eoParser  t-eoRNG  t-eoRandom  t-eoReplacement  t-eoRingTopology  t-eoRoulette  t-eoSSGA  t-eoSecondsElapsedContinue  t-eoSelect  t-eoSharing  t-eoShiftMutation  t-eoStateAndParser  t-eoSwapMutation  t-eoSymreg  t-eoSyncEasyPSO  t-eoTwoOptMutation  t-eoVector  t-eoVirus  t-eobin  t-eofitness
dep/eo/tutorial/: CTestTestfile.cmake  cmake_install.cmake
include/: MatrixIO.hpp  RandomNumbers.hpp  SpectralModelFitter.hpp  Spectrum.hpp  SpectrumGlobalOptimizer.hpp  SpectrumLocalOptimizer.hpp
src/: Main.cpp  RandomNumbers.cpp
test/: dumpRandomSpectrum.cpp  localOptimization.cpp  randomInitialValues.cpp  randomSpectra.cpp  simpleEA.cpp  test.py
(+13 files in other folders)
